# BioNGS

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.archive/draft/: qc_driver.py  stage_after_demux.py
.archive/draft/results/raw_qc_example/: index.html
.archive/script_archive/qc/io/: manifest.py  paths.py
.github/workflows/: python-app.yml
biongs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
doc/: 2026-03-05_BioNGS_techreview.pptx  components.md  use_case.md  user_story.md
docs/: Metrics Explanation.md
draft/: P22R2_R1_001_fastqc.html  P22R2_R2_001_fastqc.html  entry_qc.py  fastqc_unpacker.py  how_to_run.md  stage_raw.py  structure.md
input_data/2c_UMI/: 2c_UMI_UMI_primers.csv  2c_UMI_multiplexing_info.csv
input_data/2c_UMI/2c_UMI_fastq/: Azenta_30-1299407316_Data_Report.html
input_data/example/: example_UMI_primers.csv  example_multiplexing_info.csv
input_data/reference_docs/: rpoB_seq_df.csv  rpoBsequence.fasta  rpoBsequence.fasta.fai  rpoBsequence.gb
input_data/reference_docs/rpoB_bowtie_index/: rpoBsequence_index.3.bt2
input_data/reference_docs/rpoB_index/: rpoB_index.2.bt2  rpoB_index.4.bt2  rpoB_index.rev.2.bt2
input_data/test/: test_multiplexing_info.csv
results/2c_UMI/UMI_quality/: UMI_quality_summary.txt
results/2c_UMI/index_quality/: index_quality_results.csv  index_quality_summary.txt
results/2c_UMI/logs/: alignment_prep_terminal_output.txt  demultiplex_UMI_terminal_output.txt  demultiplex_folders_terminal_output.txt  demultiplex_index_terminal_output.txt  file_confirmation_report.txt
results/example/: run_manifest.json
results/example/UMI_quality/: UMI_quality_summary.txt
results/example/demultiplexing/: P22R1_unmatched_reads_R1.fastq  P22R1_unmatched_reads_R2.fastq
results/example/index_quality/: index_quality_results.csv  index_quality_summary.txt
results/example/logs/: alignment_prep_terminal_output.txt  demultiplex_UMI_terminal_output.txt  demultiplex_folders_terminal_output.txt  demultiplex_index_terminal_output.txt  file_confirmation_report.txt
results/example/metrics/: metrics_raw_qc.json  metrics_stage0_validation.json  metrics_stage4_clean_qc.json  metrics_stage5_1_candidate_eval_v2.json
results/tests/: test_demultiplex_folders.py  test_workflow.py
src/: README.md  align_reads.sh  bowtie_test.sh  check_UMI_quality.py  check_index_quality.py  demultiplex_UMI.py  demultiplex_folders.py  demultiplex_index.py  run_pipeline.py
src/biongs/: alignment_prep.py  check_UMI_quality.py  check_index_quality.py  demultiplex_UMI.py  demultiplex_folders.py  demultiplex_index.py  step0_file_confirmation.py  step0a_fast_qc.py  step1_demultiplex_folders.py  step2_demultiplex_index.py  step2a_check_index_quality.py  step3_demultiplex_UMI.py  step3a_check_UMI_quality.py  step4_alignment_prep.py  step5_align_reads.sh
src/biongs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/biongs/qc/: qc_driver.py
src/demux/: demux_inline_index.py
src/pipeline/: run_manifest.py  stage0_validation.py  stage1_raw_qc.py  stage2_5_demux_qc.py  stage2_demux.py  stage3_umi_extract.py  stage4_clean_qc.py  stage5_preprocess.py  stage6_post_trim_qc.py
src/primerforge/: cli.py  run_pipeline.py
src/primerforge/pipeline/: readme.md  stage1_raw_qc.py  stage2_5_demux_qc.py  stage2_demux.py  stage3_5_umi_quality.py  stage4_clean_qc.py  stage5_preprocess.py  stage6_post_trim_qc.py  stage7_family_strategy.py  stage8_5_alignment_qc.py  stage8_alignment.py
src/primerforge/qc/: overview_post_trim.py
src/primerforge/stages/: demux_inline_index.py
src/primerforge/utils/: fastq_io.py  fastq_tools.py  paths.py  resume.py
src/qc/: entry_qc.py  overview_raw.py  qc_driver.py
src/qc/io/: paths.py
src/qc/stages/: stage_after_demux.py
src/scripts/: debug_compare_metrics.py  diagnose_umi_hardmatch.py
src/utils/: decision.py  paths.py
tests/: test_descriptions  test_fast_qc.py  test_file_confirmation.py  test_stage7_family_strategy.py  test_stage8_5_alignment_qc.py  test_stage8_alignment.py
(+101 files in other folders)
